tests/bad_block_comment.stderr
tests/bad_block_comment.hop:2:1: error: HOP1012: unterminated block comment
