tests/bad_block_comment.hop
// Verifies bad block comment.
/* oops
